# novelest

./: .gitignore  meson.build  window.ui
src/: db.cpp  db.hpp  main.cpp  util.hpp  window.cpp  window.hpp
